Se coloca icono de la pagina web

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer sitio web</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon"> <!--agregue link para el icono de la pagina-->
 </head>
 <body>
     
