Se agrega el titulo y la descripcion

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon"> <!--agregue link para el icono de la pagina-->
 </head>
 <body>
-    
+   <h1>Mi primer sitio web con HTML</h1> 
+   <p>Soy estudiante de jóvenes creativos, estoy aprendiendo desarrollo web frontend y estoy realizando esta página
+    para paracticar HTML que es el primer tema que estoy aprendiendo.
+   </p>
 </body>
 </html>
