Se agrega imagen de JC

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
    <p>Soy estudiante de jóvenes creativos, estoy aprendiendo desarrollo web frontend y estoy realizando esta página
     para paracticar HTML que es el primer tema que estoy aprendiendo.
    </p>
+   <img width="500px"  src="https://jovenes.tocaunavida.org/assets/img/banner-login.jpg" alt="Visita pedagógica JC a Ruta N">
 </body>
 </html>
