Se agregan listas y enlaces

--- a/index.html
+++ b/index.html
@@ -12,5 +12,31 @@
     para paracticar HTML que es el primer tema que estoy aprendiendo.
    </p>
    <img width="500px"  src="https://jovenes.tocaunavida.org/assets/img/banner-login.jpg" alt="Visita pedagógica JC a Ruta N">
+
+   <h2>Lista ordenada</h2>
+   <ol>
+
+    <li>Hola</li>
+    <li>Hola</li>
+    <li>Hola</li>
+    <li>Hola</li>
+    <li>Hola</li>
+    <li>Hola</li>
+   </ol>
+
+   <h2>Lista desordenadas</h2>
+   <ul>
+
+    <li>Hola</li>
+    <li>Hola</li>
+    <li>Hola</li>
+    <li>Hola</li>
+    <li>Hola</li>
+    <li>Hola</li>
+   </ul>
+   <h2>Enlaces</h2>
+   <a href="https://github.com/JeanPierreRodriguezD/sitio-web-html" target="_blank">
+    Entra al repositorio dando click aquí
+   </a>
 </body>
 </html>
